[CHANGE] prevent overflow hidden on body tag
overflow hidden on body tag causes other css problems

--- a/css/yercssgrid-preset.css
+++ b/css/yercssgrid-preset.css
@@ -1,3 +1,1 @@
-html { overflow: auto; }
-body { overflow: hidden; }
 * { box-sizing: border-box; }
